# fossil-jellyfish

./: README.md  conanfile.py  meson.build
.github/ciimage/: Dockerfile.debian
.github/workflows/: meson_ci.yml
code/logic/: imagine.c  iochat.c  jellydsl.c  jellyfish.c  language.c  meson.build  text.c
code/logic/fossil/ai/: framework.h  imagine.h  iochat.h  jellydsl.h  jellyfish.h  language.h  text.h
code/logic/fossil/jellyfish/: jellyfish.h
code/tests/: meson.build  test_jellyfish.c  unit_runner.c
code/tests/cases/: test_iochat.c  test_jellyfish.c  test_jellyfish.cpp  test_lang.c
code/tests/tools/: generate-note.py  generate-runner.py  wildcard.py
subprojects/: fossil-test.wrap
